unpackaged/main/default/objects/Account/fields/MC_Overdue__c.field-meta.xml
<CustomField>
    <fullName>MC_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R166315</description>
    <label>Firm overdue on payments?</label>
    <type>Checkbox</type>
</CustomField>