unpackaged/main/default/objects/Account/fields/MC_Suspended__c.field-meta.xml
<CustomField>
    <fullName>MC_Suspended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R166315</description>
    <label>Firm suspended?</label>
    <type>Checkbox</type>
</CustomField>