unpackaged/main/default/objects/Account/fields/MQA_Disposition_Required__c.field-meta.xml
<CustomField>
    <fullName>MQA_Disposition_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked off automatically when a BDR dispositions an MQA (on the Inbound Request) via a screen flow that displays on the Account. It is used to guide Sales to disposition MQAs easily without needing to navigate to different objects and records.</description>
    <label>MQA Disposition Required</label>
    <type>Checkbox</type>
</CustomField>