unpackaged/main/default/objects/Account/fields/My_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>My_Case_ID__c</fullName>
    <externalId>true</externalId>
    <label>MyCase ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>