unpackaged/main/default/objects/Account/fields/MyCase_6QA__c.field-meta.xml
<CustomField>
    <fullName>MyCase_6QA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MyCase 6sense Integration</description>
    <label>MyCase 6QA</label>
    <type>Checkbox</type>
</CustomField>