unpackaged/main/default/objects/Account/fields/MyCase_ACH_Payments_Enabled__c.field-meta.xml
<CustomField>
    <fullName>MyCase_ACH_Payments_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R165289, updated R178236</description>
    <label>zz MyCase ACH Payments Enabled</label>
    <type>Checkbox</type>
</CustomField>