unpackaged/main/default/objects/Account/fields/MyCase_Current_Solution__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Current_Solution__c</fullName>
    <label>zz Current Solution (MyCase)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abacus/Amicus</fullName>
            </value>
            <value>
                <fullName>Abacus Law</fullName>
            </value>
            <value>
                <fullName>ACT!</fullName>
            </value>
            <value>
                <fullName>ActionStep</fullName>
            </value>
            <value>
                <fullName>Aderant</fullName>
            </value>
            <value>
                <fullName>Amicus</fullName>
            </value>
            <value>
                <fullName>Best Case</fullName>
            </value>
            <value>
                <fullName>Bill4Time</fullName>
            </value>
            <value>
                <fullName>BillingsPro</fullName>
            </value>
            <value>
                <fullName>Clio</fullName>
            </value>
            <value>
                <fullName>Cosmolex</fullName>
            </value>
            <value>
                <fullName>Daylite</fullName>
            </value>
            <value>
                <fullName>E-Bility</fullName>
            </value>
            <value>
                <fullName>File Vine</fullName>
            </value>
            <value>
                <fullName>Firm Central</fullName>
            </value>
            <value>
                <fullName>Firm Manager</fullName>
            </value>
            <value>
                <fullName>GroupReady</fullName>
            </value>
            <value>
                <fullName>Harvest</fullName>
            </value>
            <value>
                <fullName>Houdini</fullName>
            </value>
            <value>
                <fullName>Interbill</fullName>
            </value>
            <value>
                <fullName>Juris</fullName>
            </value>
            <value>
                <fullName>Lawmatics</fullName>
            </value>
            <value>
                <fullName>LEAP</fullName>
            </value>
            <value>
                <fullName>Legal Files</fullName>
            </value>
            <value>
                <fullName>LexisNexis</fullName>
            </value>
            <value>
                <fullName>MyCase</fullName>
            </value>
            <value>
                <fullName>Needles</fullName>
            </value>
            <value>
                <fullName>No LPM Software</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Omega Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>