unpackaged/main/default/objects/Account/fields/MyCase_Customer_New_Formula__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Customer_New_Formula__c</fullName>
    <description>R177806</description>
    <formula>IF(
OR(MC_Customer__c = True,MC_Customer_New__c = True), True, False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MyCase Customer New Formula</label>
    <type>Checkbox</type>
</CustomField>