unpackaged/main/default/objects/Account/fields/MyCase_Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Firm_ID__c</fullName>
    <description>R165289</description>
    <externalId>true</externalId>
    <label>MyCase Firm ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>