unpackaged/main/default/objects/Account/fields/MyCase_Payments_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Payments_Customer_Status__c</fullName>
    <inlineHelpText>Displays legacy MyCase Payments customer status.  No new sales for this product, only grandfathered clients.</inlineHelpText>
    <label>MyCase Payments Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Status_Values</valueSetName>
    </valueSet>
</CustomField>