unpackaged/main/default/objects/Account/fields/MyCase_Payments_Enabled__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Payments_Enabled__c</fullName>
    <description>R178236</description>
    <formula>OR( 
MyCase_ACH_Payments_Enabled__c = TRUE, 
MyCase_Vantiv_Payments_Enabled__c = TRUE)</formula>
    <label>zz MyCase Payments Enabled</label>
    <type>Checkbox</type>
</CustomField>