unpackaged/main/default/objects/Account/fields/MyCase_Sub_Domain__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Sub_Domain__c</fullName>
    <description>R165289</description>
    <label>MyCase Sub Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>