unpackaged/main/default/objects/Account/fields/MyCase_Trial_Expiration__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Trial_Expiration__c</fullName>
    <label>MyCase Trial Expiration</label>
    <type>Date</type>
</CustomField>