unpackaged/main/default/objects/Account/fields/MyCase_Vantiv_Payments_Enabled__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Vantiv_Payments_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R178236</description>
    <label>zz MyCase Vantiv Payments Enabled</label>
    <type>Checkbox</type>
</CustomField>