unpackaged/main/default/objects/Account/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <description>Enriched by 6sense</description>
    <label>NAICS Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>