unpackaged/main/default/objects/Account/fields/NetDocuments_Integration__c.field-meta.xml
<CustomField>
    <fullName>NetDocuments_Integration__c</fullName>
    <label>NetDocuments Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>