unpackaged/main/default/objects/Account/fields/oAuth_App_ID__c.field-meta.xml
<CustomField>
    <fullName>oAuth_App_ID__c</fullName>
    <label>oAuth App ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>