unpackaged/main/default/objects/Account/fields/of_Payments_V__c.field-meta.xml
<CustomField>
    <fullName>of_Payments_V__c</fullName>
    <inlineHelpText>Count of V+ Payments records where Stage = Sold/Not Started, On-boarding, Live, Active</inlineHelpText>
    <label># of Payments V+</label>
    <summaryFilterItems>
        <field>ValuePlus__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>MyCase Payments</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ValuePlus__c.Stage__c</field>
        <operation>equals</operation>
        <value>Sold/Not Ready, Live, On-Boarding, Active</value>
    </summaryFilterItems>
    <summaryForeignKey>ValuePlus__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>