unpackaged/main/default/objects/Account/fields/of_Websites__c.field-meta.xml
<CustomField>
    <fullName>of_Websites__c</fullName>
    <description>R152407</description>
    <inlineHelpText>Count of V+ Website records where Stage = Live or Site Delivered</inlineHelpText>
    <label>Websites Enabled</label>
    <summaryFilterItems>
        <field>ValuePlus__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>MyCase Websites</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ValuePlus__c.Stage__c</field>
        <operation>equals</operation>
        <value>Live, Site Delivered/Final Changes</value>
    </summaryFilterItems>
    <summaryForeignKey>ValuePlus__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>