unpackaged/main/default/objects/Account/fields/Offline_Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Offline_Billing_Amount__c</fullName>
    <description>Average amount of monthly offline firm transactions</description>
    <inlineHelpText>Average amount of monthly offline firm transactions</inlineHelpText>
    <label>Offline Billing Amount</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>