unpackaged/main/default/objects/Account/fields/Oldest_Open_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Oldest_Open_Invoice_Date__c</fullName>
    <description>R1915778</description>
    <inlineHelpText>Oldest Open Invoice date from the related MyCase or AppFolio Billing Account</inlineHelpText>
    <label>Oldest Open Invoice Date</label>
    <type>Date</type>
</CustomField>