unpackaged/main/default/objects/Account/fields/Open_Edge_Customer__c.field-meta.xml
<CustomField>
    <fullName>Open_Edge_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R164088</description>
    <label>Open Edge Customer</label>
    <type>Checkbox</type>
</CustomField>