unpackaged/main/default/objects/Account/fields/Oppty_with_Prohibited_Status__c.field-meta.xml
<CustomField>
    <fullName>Oppty_with_Prohibited_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account has an opportunity with a referral record that has Partner Software Non-Compete Type=Outbound and Inbound prohibited.  Updated via a flow</description>
    <label>Oppty with Prohibited Status</label>
    <type>Checkbox</type>
</CustomField>