unpackaged/main/default/objects/Account/fields/OrgURL__c.field-meta.xml
<CustomField>
    <fullName>OrgURL__c</fullName>
    <description>a dynamic field that gets the org url for each environment</description>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrgURL</label>
    <type>Text</type>
</CustomField>