unpackaged/main/default/objects/Account/fields/Original_First_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_First_Purchase_Date__c</fullName>
    <description>R1918402</description>
    <label>Original First Purchase Date</label>
    <type>Date</type>
</CustomField>