unpackaged/main/default/objects/Account/fields/Other_N_A_Explained__c.field-meta.xml
<CustomField>
    <fullName>Other_N_A_Explained__c</fullName>
    <inlineHelpText>Associated with &quot;Strategy used to retain&quot;</inlineHelpText>
    <label>Other N/A Explained</label>
    <type>TextArea</type>
</CustomField>