unpackaged/main/default/objects/Account/fields/Other_Productivity_Tools__c.field-meta.xml
<CustomField>
    <fullName>Other_Productivity_Tools__c</fullName>
    <description>R1813150</description>
    <label>Other Productivity Tools</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office 365</fullName>
            </value>
            <value>
                <fullName>MS Office (includes Outlook)</fullName>
            </value>
            <value>
                <fullName>QB Online</fullName>
            </value>
            <value>
                <fullName>QB Desktop</fullName>
            </value>
            <value>
                <fullName>G Suite (includes Gmail)</fullName>
            </value>
            <value>
                <fullName>Dropbox</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>WordPerfect</fullName>
            </value>
            <value>
                <fullName>Sharepoint</fullName>
            </value>
            <value>
                <fullName>Paper System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>