unpackaged/main/default/objects/Account/fields/Outbound_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Assigned__c</fullName>
    <description>Date account was last outbound assigned to rep through automation</description>
    <label>Outbound Assigned</label>
    <type>Date</type>
</CustomField>