unpackaged/main/default/objects/Account/fields/Outbound_Last_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Last_Assigned__c</fullName>
    <description>Date account was assigned for outbounding</description>
    <label>Outbound Last Assigned</label>
    <type>Date</type>
</CustomField>