unpackaged/main/default/objects/Account/fields/Outbound_Passed_On__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Passed_On__c</fullName>
    <description>Date account was passed on by sales rep when served to them as automated lead (used for recycling purposes in the future through automation)</description>
    <label>Outbound Passed On</label>
    <type>Date</type>
</CustomField>