unpackaged/main/default/objects/Account/fields/Outbound_Prospecting__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Prospecting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked through automation when account is being outbound prospected by BDR or AE</description>
    <label>Outbound Prospecting</label>
    <type>Checkbox</type>
</CustomField>