unpackaged/main/default/objects/Account/fields/Outbound_Segment__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Segment__c</fullName>
    <label>Outbound Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>