unpackaged/main/default/objects/Account/fields/Outreach_Owner__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R1812311</description>
    <label>IM BDR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsS1SK</relationshipName>
    <type>Lookup</type>
</CustomField>