unpackaged/main/default/objects/Account/fields/Outreach_Sync__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Sync__c</fullName>
    <description>Enabling Accounts to auto-sync with Outreach</description>
    <formula>IF( AND( 

OwnerId != &quot;0053g000001K3XAAA0&quot;, 

OwnerId != &quot;0053g000000nESpAAM&quot;,

RecordType.Name = &quot;MyCase Account&quot;),

TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Enabling Accounts to auto-sync with Outreach</inlineHelpText>
    <label>Outreach Sync</label>
    <type>Checkbox</type>
</CustomField>