unpackaged/main/default/objects/Account/fields/OwnerSSN__c.field-meta.xml
<CustomField>
    <fullName>OwnerSSN__c</fullName>
    <label>Owner SSN</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>