unpackaged/main/default/objects/Account/fields/Parent_Partner_Record__c.field-meta.xml
<CustomField>
    <fullName>Parent_Partner_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Partner Record</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Parent Partner Record)</relationshipLabel>
    <relationshipName>Parent_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>