unpackaged/main/default/objects/Account/fields/Partner_ID_VT__c.field-meta.xml
<CustomField>
    <fullName>Partner_ID_VT__c</fullName>
    <label>Partner ID (VT)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>