unpackaged/main/default/objects/Account/fields/Partner_is_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Partner_is_Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used when the partner is also a competitor in another area of the business.</inlineHelpText>
    <label>Partner is Competitor</label>
    <type>Checkbox</type>
</CustomField>