unpackaged/main/default/objects/Account/fields/Partner_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>Partner_Request_Form__c</fullName>
    <description>Used to track which Partner Inquiry Form the prospective partner submitted</description>
    <label>Partner Request Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Types</valueSetName>
    </valueSet>
</CustomField>