unpackaged/main/default/objects/Account/fields/Partner_Software_Non_Compete_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Software_Non_Compete_Type__c</fullName>
    <description>The type of non-compete we have with this partner regarding software sales</description>
    <label>Partner Software Non-Compete Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound and Inbound Prohibited</fullName>
            </value>
            <value>
                <fullName>Outbound Prohibited (time bound)</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>