unpackaged/main/default/objects/Account/fields/Partner_Status_Overall__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status_Overall__c</fullName>
    <label>Partner Status - Overall</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Churned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>