unpackaged/main/default/objects/Account/fields/Payment_Services_Rep__c.field-meta.xml
<CustomField>
    <fullName>Payment_Services_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Removed FLS for R1917684</description>
    <label>Payment Services Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>