unpackaged/main/default/objects/Account/fields/Payments_Enterprise_Partner__c.field-meta.xml
<CustomField>
    <fullName>Payments_Enterprise_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this is a Payments Enterprise Partner. All referrals from these partners should be routed to the Enterprise Sales Team.</description>
    <inlineHelpText>Indicates if this is a Payments Enterprise Partner. All referrals from these partners should be routed to the Enterprise Sales Team.</inlineHelpText>
    <label>Payments Enterprise Partner</label>
    <type>Checkbox</type>
</CustomField>