unpackaged/main/default/objects/Account/fields/Payments_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Payments_Go_Live_Date__c</fullName>
    <description>R164532</description>
    <label>Payments Go-Live Date</label>
    <type>Date</type>
</CustomField>