unpackaged/main/default/objects/Account/fields/PCI_Compliant__c.field-meta.xml
<CustomField>
    <fullName>PCI_Compliant__c</fullName>
    <inlineHelpText>Identifies if the customer is PCI compliant or not.  Blank value indicates this has not been addressed on the customer account</inlineHelpText>
    <label>PCI Compliant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>