unpackaged/main/default/objects/Account/fields/Physical_City__c.field-meta.xml
<CustomField>
    <fullName>Physical_City__c</fullName>
    <description>Created for request R151946</description>
    <label>Physical City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>