unpackaged/main/default/objects/Account/fields/Physical_Street__c.field-meta.xml
<CustomField>
    <fullName>Physical_Street__c</fullName>
    <description>Created for request R151946</description>
    <label>Physical Street</label>
    <length>40</length>
    <type>Text</type>
</CustomField>