unpackaged/main/default/objects/Account/fields/Physical_Zip__c.field-meta.xml
<CustomField>
    <fullName>Physical_Zip__c</fullName>
    <description>Created for request R151946</description>
    <label>Physical Zip</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>