unpackaged/main/default/objects/Account/fields/PPI_Active_Operating__c.field-meta.xml
<CustomField>
    <fullName>PPI_Active_Operating__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R176776</description>
    <label>PPI Active Operating</label>
    <type>Checkbox</type>
</CustomField>