unpackaged/main/default/objects/Account/fields/PPI_Interest__c.field-meta.xml
<CustomField>
    <fullName>PPI_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R176776</description>
    <label>PPI Interest</label>
    <type>Checkbox</type>
</CustomField>