unpackaged/main/default/objects/Account/fields/Practice_Area_Other__c.field-meta.xml
<CustomField>
    <fullName>Practice_Area_Other__c</fullName>
    <description>Text field used when Practice Area  = Other</description>
    <inlineHelpText>Enter Area of Practice when not found in Practice Area list field</inlineHelpText>
    <label>Practice Area (Other)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>